---
title: Class Diagram
---
classDiagram
    class iImGUIBackend {

    }
    class ImGUIFrontend {

    }
    class ImGUILinux {

    }
    class ImGUIWindows {

    }
    class ImGUI {

    }

    class StockCandle {

    }
    class StockData {
        
    }
    class StockDataBase {
        
    }

    class MacroData {

    }
    class NewsData {

    }

    class Plot {

    }

    class Layout {

    }
    iImGUIBackend <|.. ImGUILinux
    iImGUIBackend <|.. ImGUIWindows
    %% ImGUI <.. ImGUIWindows
    %% ImGUI <.. ImGUILinux
    Layout <.. ImGUIFrontend
    Layout <.. iImGUIBackend
    StockCandle <-- StockData
    StockData <-- StockDataBase